Fix a z-index issue on the post create page
the z-index of the close button was too high, which was causing it to
spookily hover over the dialog for clearing the post content. This fixes
it by just reducing the z-index a little bit.

closes #1777
pr #1815

--- a/static/scss/close-button.scss
+++ b/static/scss/close-button.scss
@@ -9,7 +9,7 @@
   width: 24px;
   display: flex;
   cursor: pointer;
-  z-index: 10;
+  z-index: 4;
 
   i {
     font-size: 21px;
